--- a/AESCryptography/pom.xml
+++ b/AESCryptography/pom.xml
@@ -20,9 +20,10 @@
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>io.basc.framework</groupId>
+			<artifactId>log4j2</artifactId>
+			<version>1.8.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
